--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,12 @@ name: modern_charts
 version: 0.2.0-nullsafety
 description: A package for creating simple yet modern looking charts.
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '2.19.6'
 homepage: https://github.com/jolleekin/modern_charts
 documentation: https://github.com/jolleekin/modern_charts/wiki
 publish_to: none
-
 dev_dependencies:
-  build_runner: ^2.1.2
-  build_web_compilers: ^3.2.1
-  test: ^1.17.12
+  build_runner: ^2.3.3
+  test: ^1.24.3
 dependencies:
-  intl: ^0.17.0
+  intl: ^0.18.1
